--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
-
+Ajanaku Oluwafemi <stanleyajanaku@gmail.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
